# feec-gmrf

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml
.cargo/: config.toml
crates/feg-gp/: Cargo.toml
crates/feg-gp/examples/: matern_1form_torus_gp.rs  matern_kernel_compare.rs
crates/feg-gp/src/: lib.rs
crates/feg-gp/tests/: hodge_laplace_integration.rs
crates/feg-infer/: Cargo.toml
crates/feg-infer/examples/: magnetostatic_posterior.rs  matern_0form_torus_conditioning.rs  matern_0form_torus_diagnostics.rs  matern_1form.rs  matern_1form_torus.rs  matern_1form_torus_conditioning.rs  matern_1form_torus_conditioning_kappa_study.rs  matern_1form_torus_diagnostics.rs  matern_1form_torus_mass_inverse_isolation.rs  matern_1form_torus_pde_conditioning.rs  matern_1form_torus_residual_study.rs  matern_grid_compare.rs  mixed_bc_2_posterior.rs  mixed_bc_hodge_laplacian_posterior.rs
crates/feg-infer/src/: diagnostics.rs  lib.rs  matern_0form.rs  matern_1form.rs  sparse.rs  torus_0form_conditioning.rs  torus_1form_conditioning.rs  torus_1form_mass_inverse_isolation.rs  torus_1form_pde_conditioning.rs  util.rs  vtk.rs
crates/feg-infer/tests/: feec_gmrf_integration.rs  matern_0form_torus_conditioning.rs  matern_torus_compare.rs  matern_torus_mass_inverse_isolation.rs  matern_torus_residual_study.rs  torus_1form_conditioning.rs  torus_1form_pde_conditioning.rs
geometries/: torus_shell.geo
meshes/: toroidal_inductor.msh  torus_shell_coarse.msh  torus_shell_resolution_0.msh  torus_shell_resolution_1.msh  torus_shell_resolution_2.msh  torus_shell_resolution_3.msh
