[workspace]
resolver = "2"
members = [
  "crates/feg-infer",
  "crates/feg-gp",
]

[workspace.dependencies]
# Match gmrf workspace dependency versions so gmrf-core can be consumed via the submodule path.
faer = "0.21"
nalgebra = { version = "0.32", default-features = true }
nalgebra-sparse = "0.9"
rand = "0.8"
rand_distr = "0.4"
thiserror = "1.0"
criterion = "0.5"
